2008-06-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Fix quoting.

	* tools/migratetmpl.pl:
	  Add first version of a tool to support migration from tmpl docs to
	  source code comments.

2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Correct invocation for gnome-doc-prepare.

2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	  Handle file or line being undefined.

	* gtkdoc-mkdb.in:
	  Warn about repeated symbols in sections. Also give line of previous
	  occurrance. Also give that info for double file entries. Fixes #473342
          Give correct error locate for one warning. Fixes #532395 partialy

2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Don't warn about overriden docs comment if its the same text.

2008-06-03  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Spelling.

	* gtkdoc-mkdb.in:
	  Warn and skip double file entries in section files.
	  
	* gtkdoc-mktmpl.in:
	  Use the new warning format in this script too.

	* gtkdoc-rebase.in:
	  Also use optional parameters here.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	  Add some since: tags for the tests too.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  tody up and add some comments regarding HTML_DIR.

	* gtkdoc-fixxref.in:
	  HTML_DIR is not neccesarily set.

	* gtkdoc-mkhtml.in:
	  Fix uninstalled.

	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Add more chapter id's and experiment with an index chapter.	  

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Improve spacing on indicies and glossaries.
