@@ -718,7 +718,7 @@ output_hierarchy (FILE *fp,
 
   for (i = 0; i < level; i++)
     fprintf (fp, "  ");
-  fprintf (fp, gtk_type_name (type));
+  fprintf (fp, "%s", gtk_type_name (type));
   fprintf (fp, "\\n");
 
   list = gtk_type_children_types (type);
